# DistGraph-PlayGround

./: .gitignore  CMakeLists.txt  README.md  spmm_demo.cpp
datasets/spmm/: dense_mat_4_3.csv  sp_mat_4.mtx
scripts/: run_dist_spmm.sh  run_spmm.sh
scripts/python/: dense_matrix_generator.py  sparse_matrix_generator.py
utility/: utilities.cpp
